# medconnect

./: .dockerignore  .gitignore  .railwayignore  ANALISIS_APIS_MEDICAS.md  AUDITORIA_COMPLETA.md  BOT_LENGUAJE_NATURAL.md  BOT_MEJORAS_AVANZADAS.md  CHANGELOG.md  COLORES_TARJETAS_DETALLES_MORADOS.md  CONFIRMACION_DATOS_REALES.md  CONTROL_PREGUNTAS_UNICAS_COMPLETO.md  COPILOT_HEALTH_AUTO_MODE.md  COPILOT_HEALTH_GUIDE.md  COPILOT_HEALTH_INTEGRACION_FORMULARIO.md  DASHBOARD_RECONOCIMIENTO_USUARIO_SOLUCIONADO.md  DEPLOYMENT_PRODUCTION_SUMMARY.md  DEPLOY_OPTIMIZACIONES.md  DESACTIVACION_ANALISIS_AUTOMATICO.md  DESARROLLO_LOCAL.md  DESPLIEGUE_FINAL.md  DETALLES_MORADOS_TARJETAS_COLORES.md  DISENO_CURSOR_AGENT_COMPLETO.md  DOMINIO_PERSONALIZADO.md  ELIMINACION_BOTON_PRUEBA_BIENVENIDA.md  ELIMINACION_BOTON_SUGERIR_TRATAMIENTO.md  ELIMINACION_COMPLETA_ICONOS.md  ELIMINACION_HEADER_COPILOT_HEALTH.md  ELIMINACION_HEADER_PANEL_FINAL.md  ELIMINACION_HEADER_SIDEBAR.md  ELIMINACION_ICONO_MENSAJE_BIENVENIDA.md  ELIMINACION_SUGERENCIAS_IA.md  ERRORES_DASHBOARD_SOLUCIONADOS.md  ESTADO_ACTUAL_SISTEMA_IAS.md  ESTADO_FINAL_BUSQUEDA_PAPERS.md  FORMATO_PAPERS_IMPLEMENTADO.md  FUNCIONALIDAD_SESIONES_COMPLETA.md  IMPLEMENTACION_ANALISIS_INTELIGENTE_RESUMEN.md  IMPLEMENTACION_BOTONES_TERMINOS_COMPLETA.md  IMPLEMENTACION_BOTON_PERFIL_PAPERS.md  IMPLEMENTACION_COPILOT_HEALTH_SIDEBAR_COMPLETA.md  (+758 more)
backend/api/: flask_api.py
backend/database/: bd_medconnect_postgres.sql  sheets_manager.py
static/css/: chat-sidebar.css  clean-ai-system.css  enhanced-sidebar-ai.css  patient-styles.css  professional-styles.css  style.css  styles.css  unified-ai-integration.css
static/js/: app.js  chat-centered-ai.js  clean-ai-system.js  debug-sidebar.js  demo-test.js  enhanced-sidebar-ai.js  fix-all-errors.js  fix-toggle-sidebar.js  force-clean-system.js  form-observer-ai.js  global-functions.js  main.js  password-change.js  patient.js  professional.js  profile.js  profile_professional.js  reports.js  restore-chat-sidebar.js  simple-unified-sidebar-ai.js  test-unified-system.js  test_session_debug.js  unified-ai-config.js  unified-ai-integration.js  unified-ai-system.js  unified-sidebar-ai.js  welcome-toast.js
templates/: 404.html  500.html  consultations.html  copilot_health.html  index.html  login.html  patient.html  patients.html  professional.html  professional.html.backup_1754000364  professional.html.backup_1754013502  professional.html.backup_final  profile.html  profile_professional.html  register.html  reports.html  schedule.html  test_ia_formulario.html  ui_test.html
tests/: conftest.py  test_citation_assignment.py  test_parsing_apa_ranking.py
